improve metrics handling

--- a/admin/tab_m.html
+++ b/admin/tab_m.html
@@ -21,6 +21,7 @@
                 Base Path: <code id="basePath"
                     style="background: #eee; padding: 2px 6px; border-radius: 4px;">Loading...</code>
                 <span class="status" id="status" style="background: #999; margin-left: 10px;">Connecting...</span>
+                <span id="metricsTimer" class="metrics-timer"></span>
             </div>
         </div>
 
