--- a/admin/tab_m.html
+++ b/admin/tab_m.html
@@ -38,6 +38,7 @@
         <div class="tabs">
             <button class="tab-button active" onclick="switchTab('devices')">Devices</button>
             <button class="tab-button" onclick="switchTab('rooms')">Rooms</button>
+            <button class="tab-button" onclick="switchTab('scenes')">Scenes</button>
             <div class="action-buttons">
                 <button class="action-btn export" onclick="exportData()">⬇️ Export</button>
                 <button class="action-btn import" onclick="document.getElementById('importFile').click()">⬆️
@@ -87,6 +88,7 @@
     <script src="./js/helpers.js"></script>
     <script src="./js/devices.js"></script>
     <script src="./js/rooms.js"></script>
+    <script src="./js/scenes.js"></script>
     <script src="./js/modals.js"></script>
     <script src="./js/app.js"></script>
 </body>
