--- a/admin/tab_m.html
+++ b/admin/tab_m.html
@@ -86,12 +86,12 @@
         </div>
     </div>
 
-    <script src="./js/helpers.js"></script>
-    <script src="./js/devices.js"></script>
-    <script src="./js/rooms.js"></script>
-    <script src="./js/scenes.js"></script>
-    <script src="./js/modals.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/helpers.js?v=20260117"></script>
+    <script src="./js/devices.js?v=20260117"></script>
+    <script src="./js/rooms.js?v=20260117"></script>
+    <script src="./js/scenes.js?v=20260117"></script>
+    <script src="./js/modals.js?v=20260117"></script>
+    <script src="./js/app.js?v=20260117"></script>
 </body>
 
 </html>
